Prevent submission of blank searches and adjust search term spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,10 @@ a:visited {
   color: grey;
 }
 
+#recent-filters p {
+  margin: 5px;
+}
+
 @media only screen and (max-width: 767px) {
   #title {
     display: none;
